# allegro_hand_grasping_sim

./: .gitignore  CMakeLists.txt
0-allegro_hand_only/: CMakeLists.txt  allegro_hand.urdf  controller.cpp  force_controller.cpp  joint_controller.cpp  simviz.cpp  task_controller.cpp  world.urdf
00-ball_reorient/: CMakeLists.txt  allegro_hand.urdf  controller.cpp  launch_sim+con.sh  panda_arm_allegro.urdf  simviz.cpp  world.urdf
02-dual_proxy_motion_normal_force_robot/: controller.cpp  panda_arm_allegro.urdf  panda_arm_allegro_left.urdf  simviz.cpp  world.urdf
03-dual_proxy_surface_alignment_robot/: simviz.cpp
1-panda_with_allegro/: CMakeLists.txt  arm_and_hand_controller.cpp  arm_task_controller.cpp  hand_task_controller.cpp  joint_controller.cpp  panda_arm.urdf  panda_arm_allegro.urdf  simviz.cpp  task_controller.cpp  world.urdf
scripts/: plot_workspace.py
src/: Logger.h
